--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,3 +2,6 @@ project(Sajjad)
 cmake_minimum_required (VERSION 2.8.11)
 add_executable(sender FileSender.cpp)
 add_executable(receiver FileReceiver.cpp)
+add_library(Compressor Compressor.cpp)
+target_link_libraries(sender Compressor)
+target_link_libraries(receiver Compressor)
