Final Commit Multi thread is ok Encryption is ok Compress with system() is ok No tests

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,9 @@
 project(Sajjad)
 cmake_minimum_required (VERSION 2.8.11)
+find_package(Threads)
 add_executable(sender FileSender.cpp)
 add_executable(receiver FileReceiver.cpp)
 add_library(Compressor Compressor.cpp)
-target_link_libraries(sender Compressor)
-target_link_libraries(receiver Compressor)
+add_library(Encryptor Encryptor.cpp encrypt.cpp decrypt.cpp)
+target_link_libraries(sender Compressor Encryptor)
+target_link_libraries(receiver Compressor Encryptor ${CMAKE_THREAD_LIBS_INIT})
