--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,6 @@ find_package(Threads)
 add_executable(sender FileSender.cpp)
 add_executable(receiver FileReceiver.cpp)
 add_library(Compressor Compressor.cpp)
-add_library(Encryptor Encryptor.cpp encrypt.cpp decrypt.cpp)
+add_library(Encryptor Encryptor.cpp)
 target_link_libraries(sender Compressor Encryptor)
 target_link_libraries(receiver Compressor Encryptor ${CMAKE_THREAD_LIBS_INIT})
